updated the file name

--- a/ServiceProvider/src/main/resources/eureka-client.properties
+++ b/ServiceProvider/src/main/resources/eureka-client.properties
@@ -11,7 +11,7 @@ eureka.region=default
 
 #Name of the application to be identified by other services
 
-eureka.name=/user/serviceA
+eureka.name=/work/serviceA
 
 #Virtual host name by which the clients identifies this service
 eureka.vipAddress=serviceA.akka.essentials.org
@@ -26,4 +26,7 @@ eureka.preferSameZone=false
 #of specifying the DNS entries, check the eureka-client-test.properties, eureka-client-prod.properties
 eureka.shouldUseDns=false
 
-eureka.serviceUrl.default=http://127.0.0.1/eureka/v2/
+eureka.us-east-1.availabilityZones=default
+
+eureka.serviceUrl.default=http://localhost/eureka/v2/
+
